...
        NavigationStack(path: $projects) {
            VStack {
                HStack {
                    Button("New Project") {
                        projects.append(Project())
                    }
                    .accessibilityIdentifier("AddNewProjectButton")
                }
                
                ScrollView {
                    LazyVGrid(columns: columns) {
                        ForEach(projectsDisplay, id: \.self.project.id) { project in
                            ProjectDisplayView(
...
