...
                    .padding(.bottom, 5)
                    .overlay(Rectangle()
                        .fill(Color(hex: 0x131944, opacity: 0.9))
                        .frame(maxWidth: .infinity, maxHeight: 5),
                        alignment: .bottom)
                    .font(.custom("SourceSans3-Medium", size: 14))
                    .accessibilityIdentifier("ProjectNameTextfield")
                Button("Cancel") {
                    project.data.name = project.bindedName
                    isEditing = false
                }
            } else {
                Text(project.data.name)
...
