...
        projectsNavigation.removeLast()
    }

    var body: some View {
        VStack(alignment: .leading) {
            HStack {
                ProjectName(project: project)
                Spacer()
                Button("Save Project") {
                    saveProject()
                }
                .buttonStyle(SaveProjectButtonStyle())
                .accessibilityIdentifier("SaveButton")
...
        .padding([.top, .bottom], 20)
    }
}

// #Preview {
//    ProjectDetails(project: ProjectData(
//    data: Project(id: 2, name: "Project Name", completed: false, createDate: Date(), updateDate: Date())), projectSections: ProjectSections(), projectsNavigation: [Project()])
// }

